--- a/index.html
+++ b/index.html
@@ -23,18 +23,41 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="test3">
+  <meta name="apple-mobile-web-app-title" content="youbee">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>test3</title>
+  <title>youbee</title>
   <link rel="manifest" href="manifest.json">
+ <script type="module">
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
 
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyB5ai3JC5xWSVFrtJn69QwtaGmXh4tMqBM",
+  authDomain: "youbee-58a8f.firebaseapp.com",
+  projectId: "youbee-58a8f",
+  storageBucket: "youbee-58a8f.appspot.com",
+  messagingSenderId: "257137883466",
+  appId: "1:257137883466:web:4990aa39fa0aa6a92229b3",
+  measurementId: "G-TDB441DCBL"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+
+ </script>
   <script>
+
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '247811562';
+    var serviceWorkerVersion = '1800695214';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -46,12 +69,11 @@
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
-            appRunner.runApp();
-          });
         }
+      }).then(function(engineInitializer) {
+        return engineInitializer.initializeEngine();
+      }).then(function(appRunner) {
+        return appRunner.runApp();
       });
     });
   </script>
