--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3568268358';
+    var serviceWorkerVersion = '308906116';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/@flutter/flutter-sdk/web_entry.js"></script>
+<script>
+  // Initialisiere das Flutter-Web-SDK
+  _flutter.init();
+</script>
+
 </head>
 <body>
   <script>
