--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="https://tommyle.github.io/nautical_web/">
+  <base href="https://nexoknechthd.github.io/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -34,7 +34,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3427862401';
+    var serviceWorkerVersion = '1917579383';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
