--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  <!-- Production Version bitch -->
   <base href="https://nexoknechthd.github.io/">
+<!-- flutter build web --web-renderer canvaskit -->
+  <!-- Debug Version bitch -->
+  <!-- <base href="/"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Halfdevelopment">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="nautical">
+  <meta name="apple-mobile-web-app-title" content="Halfdevelopment">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
