--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <!-- Production Version bitch -->
-  <base href="nexoknechthd.github.io">
-<!-- flutter build web --web-renderer canvaskit -->
+  <base href="https://nexoknechthd.github.io/">
+
   <!-- Debug Version bitch -->
   <!-- <base href="/"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Halfdevelopment">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Halfdevelopment">
+  <meta name="apple-mobile-web-app-title" content="nautical">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
